<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="user.PurchaseDetailsActivity">


    <TextView
        android:id="@+id/itemAuthor"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_author"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/product_detail"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_purchase_details" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_rectangle_color"
        android:text="@string/product_title"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/itemClategory"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_category"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/itemAuthor"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

    <TextView
        android:id="@+id/itemClasification"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_rectangle_color"
        android:text="@string/product_classification"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/itemPrice"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/itemReleasedDate"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_released_date"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAuthor"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/purchase_detail"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemReleasedDate" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_rectangle_color"
        android:text="@string/product_price"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_final_price"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_amount"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_comision"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_commission"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_final_price"
        app:layout_constraintTop_toBottomOf="@+id/itemClasification"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_date_of_purchase"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_color"
        android:gravity="center"
        android:text="@string/product_date_of_purchase"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_final_price"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/itemLogo"
        android:layout_width="282dp"
        android:layout_height="245dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="14dp"
        android:background="#440131"
        android:contentDescription="@string/item_logo_del_product"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_purchase_details"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imb_purchase_details"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBackground"
        android:contentDescription="@string/imageButtonBack"
        android:scaleType="centerInside"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorOnPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>