<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="user.UserActivity">

    <TextView
        android:id="@+id/label_user_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/underline_userProductsInfo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_spent_money" />

    <TextView
        android:id="@+id/tv_quantity_user_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="8dp"
        android:text="@string/count"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_quantity_user_products" />

    <TextView
        android:id="@+id/tv_user_spent_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cash"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_spent_money" />

    <TextView
        android:id="@+id/label_user_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/underline_userMoney"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_user_logo" />

    <ImageView
        android:id="@+id/im_user_logo"
        android:layout_width="136dp"
        android:layout_height="114dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user"
        app:srcCompat="@drawable/baseline_account_circle_24" app:tint="@color/colorOnPrimary" />

    <ImageButton
        android:id="@+id/back_user"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:backgroundTint="@color/colorBackground"
        android:contentDescription="@string/imageButtonBack"
        android:scaleType="centerInside"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorOnPrimary"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/back_user"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Usuario" />

    <EditText
        android:id="@+id/et_c_userName"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/nick_name"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="@color/colorText"
        android:textColorHint="#000000"
        app:layout_constraintStart_toEndOf="@+id/im_user_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_user_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="1dp"
        android:text="@string/underline_nickName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_c_userName"
        app:layout_constraintStart_toEndOf="@+id/im_user_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/label_quantity_user_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/underline_quantity_user_of_products"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/label_user_money"
        app:layout_constraintTop_toBottomOf="@+id/im_user_logo" />

    <TextView
        android:id="@+id/tv_user_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cash"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_money" />

    <TextView
        android:id="@+id/label_user_spent_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/underline_userSpentMoney"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_money" />

    <TextView
        android:id="@+id/label_disc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/disc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_book" />

    <TextView
        android:id="@+id/label_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/book"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_product_info" />

    <TextView
        android:id="@+id/tv_quantity_user_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="15dp"
        android:text="@string/count"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_quantity_user_disc"
        app:layout_constraintStart_toEndOf="@+id/label_book"
        app:layout_constraintTop_toBottomOf="@+id/label_user_product_info" />

    <TextView
        android:id="@+id/tv_quantity_user_disc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/count"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/label_disc"
        app:layout_constraintTop_toBottomOf="@+id/label_user_product_info" />

    <TextView
        android:id="@+id/tv_spent_on_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="164dp"
        android:text="@string/cash"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity_user_books"
        app:layout_constraintTop_toBottomOf="@+id/label_user_product_info" />

    <TextView
        android:id="@+id/tv_spent_on_disc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="164dp"
        android:text="@string/cash"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity_user_disc"
        app:layout_constraintTop_toBottomOf="@+id/tv_spent_on_book" />

    <TextView
        android:id="@+id/label_user_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/underline_user_history"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_disc" />

    <TextView
        android:id="@+id/tv_last_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_purchase"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_history" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_history"
        android:textColor="#001E6B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_purchase" />

    <TextView
        android:id="@+id/tv_log_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/logOff"
        android:textColor="#B80000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user_history" />

    <TextView
        android:id="@+id/tv_user_created_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/user_create_data"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>