<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="user.ProductsUserDetailsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="21dp">

    <TextView
        android:id="@+id/itemSynopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAuthor"
        tools:text="el pr" />

    <TextView
        android:id="@+id/itemReleasedDate"
        android:layout_width="125dp"
        android:layout_height="31dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/product_released_date"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/item_p_logo"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/itemClategory"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/product_category"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemReleasedDate" />

    <TextView
        android:id="@+id/itemAuthor"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/product_author"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemClategory" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imb_back_product_user"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="titulo" />

    <ImageView
        android:id="@+id/item_p_logo"
        android:layout_width="221dp"
        android:layout_height="200dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:background="#440131"
        android:contentDescription="@string/item_logo_del_product"
        app:layout_constraintBottom_toTopOf="@+id/itemClategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imb_back_product_user"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorBackground"
        android:contentDescription="@string/imageButtonBack"
        android:scaleType="centerInside"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorOnPrimary"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>